# DjangoCourse1

./: .env.sample  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: sent_letter.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_receivemail_options.py  0004_alter_message_options_message_owner.py  0006_attemptmailing_owner.py  0007_alter_mailing_end_sending_and_more.py  0008_alter_mailing_client_alter_mailing_is_active_and_more.py  0009_alter_mailing_client.py  0010_mailing_owner.py
mailing/templates/: home.html
mailing/templates/includes/: chain.html  main_menu.html
mailing/templates/mailing/: attemptmailing_list.html  base.html  contacts.html  home.html  mailing_list.html  message_list.html  receive_delete.html  receive_detail.html  receive_list.html  receivemail_list.html  reсeive_create.html  send_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: login.html  password_reset.html  password_set_new.html
users/templates/users/: user_confirm_delete.html  user_detail.html  user_lists.html
